# blog_os

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  memory.rs  vga_buffer.rs
