[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "blog_os"
test = false
bench = false


[dependencies]
spin = "0.5.2"
bootloader = "0.9"
volatile = "0.2.6"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]